Updated HologramUtils